--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     overflow: hidden;
     border: 1px solid rgb(0,101,45);
     background-color: rgb(0,101,45);
+    height: 43px;
   }
   
   /* Style the buttons that are used to open the tab content */
@@ -13,7 +14,20 @@
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
-    color: white
+    color: white;
+    height: 43px;
+  }
+
+  @media only screen and (max-width: 1000px) {
+    .tab button {
+      height: 100px;
+    }
+  }
+
+  @media only screen and (max-width: 1000px) {
+    .tab {
+      height: 100px;
+    }
   }
   
   /* Change background color of buttons on hover */
